# fletcher

./: .dockerignore  .env  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  Cargo.toml  Containerfile  README.md  bacon.toml  build.rs  coderabbit.yaml  deny.toml  justfile  package-lock.json  package.json  tailwind.css  trivy.yaml
.github/: CODEOWNERS
.github/workflows/: docker.yaml  markdown.yaml  python.yaml  rust.yaml  trivy.yaml
.sqlx/: query-039b417ca1267eb88a9fe896a944171097e1a3c0faea7a157f9b99187215a9ba.json  query-3572791a0ef0e36794adf0e045ca480b549bc1b93ba7e554010b206a4f91e167.json  query-49e03386f9dfd36d265891e67303cecdb5c9b2400871034447c646ddd4ade5ac.json  query-635ae460fa2e6e5cd41ae6499580eb56a8010df3008ffbab0311ec4b563fd216.json  query-6ede60d31bd6b9f35b117ea7f0388cd77b461a05f46ea853b42d8b51d709040e.json  query-72791f12226467d916b7e735bd82cef446b7d1b0d7f15ba285c7515ff3a655c1.json  query-8cb75a6fef27a0f33a60edb8c24e71dd29c0d32c854dfa82e9980e0860872aec.json  query-9873a0f7a9be4118c80dc67e62ca1193614fb38cce064b281249089c06c631a3.json  query-bd6bfe4fa476c74c9a4e9e7203092fdd084dba4717686d8b4d74c49e627cb741.json  query-cb0a0ba6c9a3b799b463c370fff66c9c73c03887fd93d657a89fa5e805b9cb30.json  query-d9b0be7a437d0513b31c42b673b50d0acb34f1cb7ef30398a11dc182a364a15d.json  query-e4695659ce93f76b82158db94355c7b46f604a2f275d1e58c602c0fb8ed19e5a.json  query-f1b44f8b66209c5eec2f292e9ce2f9a8a09e2f5b58d40e11f11527f1cf533c42.json  query-f484f8f8f0dcdfffc1c66660c3f4746a8fde9a650ac82aec53e43635249a774c.json
key_hasher/: Cargo.toml  README.md
key_hasher/src/: main.rs
key_hasher/tests/: cli_tests.rs  integration_tests.rs
locust/: README.md  locustfile.py  pyproject.toml
locust/results/: notes.md
locust/results/busiest_day/: busiest_day_test.html  busiest_day_test_requests.csv
locust/results/stress_10_connections/: Locust_2025-08-03-13h17_locustfile.py_http___0.0.0.0_3000_requests.csv
locust/results/stress_30_connections/: stress_test_30_connections_requests.csv
locust/src/: locustfile.py  model.py  setup.py
migrations/: 20250605231308_create_tables.down.sql  20250605231308_create_tables.up.sql
scripts/: healthcheck.sh
src/: api.rs  auth.rs  core.rs  dag.rs  db.rs  error.rs  graph.rs  main.rs  model.rs
src/ui/: component.rs  error.rs  layout.rs  mod.rs  page.rs  snippet.rs
