[package]
name = "fletcher"
version = "0.1.0"
license = "LicenseRef-PwC-Proprietary"
edition = "2024"

[dependencies]
chrono = "0.4.41"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
poem = "3.1.11"
poem-openapi = { version = "5.1.15", features = ["chrono", "swagger-ui", "uuid"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "uuid", "testing"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.19"
uuid = "1.17.0"
validator = "0.20.0"

[dev-dependencies]
mockall = "0.13"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "uuid", "testing"] }
tokio-test = "0.4"
serde_test = "1.0"
poem-test = "3.1"
