[package]
name = "fletcher"
version = "0.1.0"
license = "LicenseRef-PwC-Proprietary"
edition = "2024"

[dependencies]
chrono = "0.4.41"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
maud = { version = "0.27.0", features = ["poem"] }
petgraph = "0.8.2"
poem = { version = "3.1.11", features = ["embed"] }
poem-openapi = { version = "5.1.15", features = ["chrono", "swagger-ui", "uuid"] }
rust-embed = "8.7.2"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }
validator = "0.20.0"

[dev-dependencies]
poem = { version = "3.1.11", features = ["test"] }
pretty_assertions = "1.4.1"

[build-dependencies]
fs_extra = "1.3.0"
