[package]
name = "fletcher"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[dependencies]
bcrypt = "0.17.1"
chrono = "0.4.41"
color-eyre = "0.6.5"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
maud = { version = "0.27.0", features = ["poem"] }
petgraph = "0.8.2"
poem = { version = "3.1.12", features = ["embed"] }
poem-openapi = { version = "5.1.16", features = ["chrono", "swagger-ui", "uuid"] }
rand = "0.9.2"
rust-embed = "8.7.2"
serde = "1.0.219"
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.15"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.18.0", features = ["v4"] }
validator = "0.20.0"

[dev-dependencies]
poem = { version = "3.1.12", features = ["test"] }
pretty_assertions = "1.4.1"
scraper = "0.23.1"

[build-dependencies]
fs_extra = "1.3.0"

[workspace]
members = [
    "key_hasher"
]
