[project]
name = "fletcher"
version = "0.1.0"
description = "Stress test for the Fletcher Webservice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "locust>=2.37.14",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.4.0",
    "pyright>=1.1.403",
    "ruff>=0.12.5",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]
